io-sdk/templates/iosdk-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: iosdk-nginx
  labels:
    app: iosdk-nginx
spec:
  containers:
    - name: iosdk-nginx
      image: nginx
      ports:
        - containerPort: 8080
          name: "http-server"
      volumeMounts:
        - mountPath: "/opt"
          name: iosdk-storage
        - mountPath: "/etc/nginx/conf.d/virtualhost.conf"
          subPath: virtualhost.conf
          name: nginx-conf
          readOnly: true
        - mountPath: /var/log/nginx
          name: log
  volumes:
    - name: iosdk-storage
      persistentVolumeClaim:
        claimName: iosdk-pvc
    - name: nginx-conf
      configMap:
        name: nginx-conf
    - name: log
      emptyDir: {}
