io-sdk/templates/iosdk.yaml
apiVersion: v1
kind: Pod
metadata:
  name: iosdk
spec:
  volumes:
    - name: iosdk-storage
      persistentVolumeClaim:
        claimName: iosdk-pvc
  containers:
    - name: iosdk-job
      image: sciabarracom/io-sdk
      imagePullPolicy: Always
      command: ["/job.sh"]
      #command: ["/bin/bash", "-c", "\"cd /opt && rm -rvf io-sdk && git clone https://github.com/pagopa/io-sdk.git && /usr/bin/wsk property set --apihost $APIHOST --auth $AUTH && cd io-sdk/admin && make web && make deploy\""]
      volumeMounts:
        - mountPath: "/opt"
          name: iosdk-storage
