io-sdk/templates/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: nginx-conf 
      mountPath: "/etc/nginx/conf.d/virtualhost.conf"
      subPath: virtualhost.conf
      readOnly: true
  volumes:
  - name: nginx-conf 
    configMap:
      name: nginx-conf
